First flexbox block

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Flexbox на практике</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
+
 <body>
-    <h1 class="">Первый заголовок</h1>
+
+    <div class="main">
+        <div class="bl fl1">1</div>
+        <div class="bl fl2">2</div>
+        <div class="bl fl3">3</div>
+        <div class="bl fl4">4</div>
+        <div class="bl fl5">5</div>
+        <div class="bl fl6">6</div>
+    </div>
+
 </body>
 </html>
