--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,12 @@
 <body>
 
     <div class="main">
-        <div class="bl fl1">1</div>
-        <div class="bl fl2">2</div>
-        <div class="bl fl3">3</div>
-        <div class="bl fl4">4</div>
-        <div class="bl fl5">5</div>
-        <div class="bl fl6">6</div>
+        <div class="bl fl1">1 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet beatae blanditiis debitis ea optio? Consequuntur dolorum mollitia officiis quasi quisquam?</div>
+        <div class="bl fl2">2 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur dicta error odio quibusdam quis unde ut, veritatis voluptates. Asperiores aut blanditiis commodi eligendi error minima odio quis ratione, sint totam.</div>
+        <div class="bl fl3">3 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, dolorem et ipsa laudantium quibusdam recusandae sint voluptates. Accusamus, impedit, maxime!</div>
+        <div class="bl fl4">4 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam dolore enim facere ipsam maiores optio provident quia, repellat similique sunt!</div>
+        <div class="bl fl5">5 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur earum error est, hic iste laboriosam minus necessitatibus nihil numquam repellat.</div>
+        <div class="bl fl6">6 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt et impedit necessitatibus nihil nobis ratione, tenetur? Ab distinctio praesentium unde.</div>
     </div>
 
 </body>
