Адаптивная весртка с картинками

--- a/src/index.html
+++ b/src/index.html
@@ -3,18 +3,55 @@
 <head>
     <title>Flexbox на практике</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
 <body>
 
     <div class="main">
-        <div class="bl fl1">1 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet beatae blanditiis debitis ea optio? Consequuntur dolorum mollitia officiis quasi quisquam?</div>
-        <div class="bl fl2">2 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur dicta error odio quibusdam quis unde ut, veritatis voluptates. Asperiores aut blanditiis commodi eligendi error minima odio quis ratione, sint totam.</div>
-        <div class="bl fl3">3 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, dolorem et ipsa laudantium quibusdam recusandae sint voluptates. Accusamus, impedit, maxime!</div>
-        <div class="bl fl4">4 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam dolore enim facere ipsam maiores optio provident quia, repellat similique sunt!</div>
-        <div class="bl fl5">5 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur earum error est, hic iste laboriosam minus necessitatibus nihil numquam repellat.</div>
-        <div class="bl fl6">6 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt et impedit necessitatibus nihil nobis ratione, tenetur? Ab distinctio praesentium unde.</div>
+        <div class="bl fl1">
+            <div class="image"><img src="images/cat1.jpg" alt=""></div>
+            <div class="text">
+                <h3>Lorem ipsum dolor.</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+                <a href="#" class="button">Читать...</a></div>
+        </div>
+        <div class="bl fl2">
+            <div class="image"><img src="images/cat2.jpg" alt=""></div>
+            <div class="text">
+                <h3>Consequuntur, distinctio, ipsam!</h3>
+                <p>Cum doloribus fuga necessitatibus provident quasi, sunt.</p>
+                <a href="#" class="button">Читать...</a></div>
+        </div>
+        <div class="bl fl3">
+            <div class="image"><img src="images/cat3.jpg" alt=""></div>
+            <div class="text">
+                <h3>Excepturi, natus, similique?</h3>
+                <p>At deleniti dolorem iste labore voluptas voluptate?</p>
+                <a href="#" class="button">Читать...</a></div>
+        </div>
+        <div class="bl fl4">
+            <div class="image"><img src="images/cat4.jpg" alt=""></div>
+            <div class="text">
+                <h3>Accusantium, sequi tempora?</h3>
+                <p>Cupiditate earum in modi odit optio rerum.</p>
+                <a href="#" class="button">Читать...</a></div>
+        </div>
+        <div class="bl fl5">
+            <div class="image"><img src="images/cat5.jpg" alt=""></div>
+            <div class="text">
+                <h3>Commodi, ratione, voluptatum.</h3>
+                <p>Beatae eius fuga nisi, nobis porro possimus.</p>
+                <a href="#" class="button">Читать...</a></div>
+        </div>
+        <div class="bl fl6">
+            <div class="image"><img src="images/cat6.jpg" alt=""></div>
+            <div class="text">
+                <h3>Consequatur distinctio, esse.</h3>
+                <p>Corporis, itaque minus quisquam reprehenderit temporibus voluptate?</p>
+                <a href="#" class="button">Читать...</a></div>
+        </div>
     </div>
 
 </body>
